--- a/.github/workflows/create-tag.yaml
+++ b/.github/workflows/create-tag.yaml
@@ -14,14 +14,9 @@ jobs:
       - name: 'Get Previous tag'
         id: previoustag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
-      - name: 'Get next patch version'
-        id: semvers
-        uses: "WyriHaximus/github-action-next-semvers@v1"
-        with:
-          version: ${{ steps.previoustag.outputs.tag }}
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v5.5
         with:
-          custom_tag: ${{ steps.semvers.outputs.patch }}-${{ steps.extract_branch.outputs.branch }}
+          custom_tag: ${{ steps.previoustag.outputs.tag }}-${{ steps.semvers.outputs.extract_branch }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
