--- a/.github/workflows/create-tag.yaml
+++ b/.github/workflows/create-tag.yaml
@@ -20,11 +20,14 @@ jobs:
           owner: ${{ env.org }}
           repo: ${{ env.repo }}
           excludes: prerelease, draft
+      - name: Set up git
+        shell: bash
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
       - name: Push new tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v5.5
-        with:
-          default_bump: false
-          tag_prefix: ""
-          custom_tag: ${{ steps.previoustag.outputs.release }}-${{ steps.extract_branch.outputs.branch }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
+        env:
+          new_tag: ${{ steps.previoustag.outputs.release }}-${{ steps.extract_branch.outputs.branch }}
+        run: |
+          git push ${new_tag} -f
