--- a/.github/workflows/create-tag.yaml
+++ b/.github/workflows/create-tag.yaml
@@ -18,11 +18,15 @@ jobs:
           repo: ${{ env.repo }}
           excludes: prerelease, draft
       - name: Checkout code
-        uses: actions/checkout@v2.2.0
+        uses: actions/checkout@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Run push
         env:
           new_tag: ${{ steps.previoustag.outputs.release }}-${{ steps.extract_branch.outputs.branch }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git push ${new_tag} -f
+          git tag -a ${new_tag} -m "dev tag"
+          git push origin ${new_tag} -f --tags
