--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,6 +15,8 @@ builds:
       - -s -w -X main.version={{ .Version }}
     goos:
       - linux
+      - darwin
+      - windows
     goarch:
       - amd64
       - arm64
