--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,10 +29,10 @@ archives:
   - id: default
     builds:
       - default
-    name_template: "pctl_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
+    name_template: "doki_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
     format: tar.gz
     files:
       - none*
 
 checksum:
-  name_template: "pctl_checksums.txt"
+  name_template: "doki_checksums.txt"
